--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Small description of the service
+Description=RAWGraphs
 After=network.target
 
 [Service]
@@ -7,9 +7,13 @@ Type=simple
 User=__APP__
 Group=__APP__
 WorkingDirectory=__INSTALL_DIR__/
-ExecStart=__INSTALL_DIR__/script
-StandardOutput=append:/var/log/__APP__/__APP__.log
-StandardError=inherit
+Environment="PATH=__ENV_PATH__"
+Environment="NODE_ENV=production"
+ExecStart=/usr/bin/yarn start
+Restart=on-failure
+RestartSec=5
+StartLimitInterval=60s
+StartLimitBurst=3
 
 # Sandboxing options to harden security
 # Depending on specificities of your service/app, you may need to tweak these
