--- a/conf/.env
+++ b/conf/.env
@@ -7,7 +7,7 @@ CORE_RETURN_HTTPS=true
 CORE_SECRET="__SECRET__"
 CORE_HOST=127.0.0.1
 CORE_PORT=__PORT__
-CORE_DATABASE_URL="postgres://__DB_USER__:__DB_PW__@localhost/__DB_NAME__"
+CORE_DATABASE_URL="postgres://__DB_USER__:__DB_PWD__@localhost/__DB_NAME__"
 CORE_LOGGER=false
 CORE_STATS_INTERVAL=1800
 CORE_INVITES_INTERVAL=1800
